src/main/java/com/example/sebackend/error/NullError.java
package com.example.sebackend.error;

public class NullError implements ServiceError{

    @Override
    public String getMessage() {
        return "Something is null!";
    }

    @Override
    public Integer getCode() {return 2;}
}
